--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   },
   "author": "Joey Cadieux DEV",
   "license": "ISC",
-  "description": "Joey Cadieux Dev | LinkTree"
+  "description": "Joey Cadieux Dev | LinkTree",
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  }
 }
